Version 0.70 - 20 March 2009

- mousedrake:
  o configure input driver as 'vmmouse' if running in vmware (#29106)
  o test if the file is there before trying to install the packages, that saves 
    a rpm -q in harddrake service after adding/removing/changing a mouse
- XFdrake:
  o adapt for recent changes in proprietary driver alternatives

Version 0.69 - 29 January 2009

- XFdrake:
  o use option -noAutoAddDevices when testing X
    (useful during installation, #47237)

Version 0.68 - 28 January 2009

- keyboarddrake:
  o bug fix: overwrite previous /etc/sysconfig/keyboard Xkb information when
    changing keyboard

Version 0.67 - 8 January 2009

- mousedrake:
  o synaptics driver in now in package x11-driver-input-synaptics (#45531)

Version 0.66 - 18 December 2008

- keyboarddrake:
  o do not configure hal directly, but write in /etc/sysconfig/keyboard Xkb
    information so hal can get them
  o new option "--migrate" which adds Xkb information in
    /etc/sysconfig/keyboard
  o correctly handle default XkbModel
    (so that we do not force pc105 when we should not)

Version 0.65 - 8 December 2008

- keyboarddrake:
  o configure hal so Xorg can get xkb info
    (nb: for now, you must "service haldaemon restart" to be taken into account)
- XFdrake:
  o generic flat planel must allow "800x480 @ 60.00 Hz (GTF) hsync: 29.82 kHz"
    so "HorizSync 31.5-90" is too strict, generating "HorizSync 29.5-90"
  o have Option "PanelGeometry" "XXxYY" on geode driver
  o do not display the weird ratios 128/75, 85/48 (for 1024x600 and 1360x768)
  o do not load "Type1" module by default (disabled in xserver-1.5.x)
  o special hack for gdium: the "default monitor" is "Plug'n Play" instead of
    good_default_monitor() (it will work since the resolution is passed to the
    kernel on gdium)
  o there is no reason "automatic" resolution should imply "automatic" color
    depth
- mousedrake, XFdrake:
  o do not use /dev/mouse symlink (in xorg.conf)
- mousedrake