@@ -1,3 +1,8 @@
+- XFdrake:
+  o add support for xdriver=DRIVER kernel boot option that affects
+    non-interactive device autodetection, e.g. One boot
+    (special value xdriver=free disables proprietary drivers)
+
 Version 0.70 - 20 March 2009
 
 - mousedrake:
